--- a/CSS.css
+++ b/CSS.css
@@ -1,43 +1,55 @@
 @charset "utf-8";
 /* CSS Document */
+
+body {
+	margin: 5px;
+}
 .header {
-  padding: 5px;
+  padding: 30px;
   text-align: center;
-  background: #08D258;
-  color: white;
+  background-image: url(greengrass.jpg);
+  color: black;
+	background-size: 100%;
 }
 
 .header h1 {
-  font-size: 40px;
+  font-size: 60px;
 }
 
-/* Style the top navigation bar */
+
 .navbar {
-  overflow: hidden; /* Hide overflow */
-  background-color: white; /* Dark background color */
+  overflow: hidden;
+  background-color: white;
   border: 1px solid #555;
-
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
 }
 
-/* Style the navigation bar links */
 .navbar a {
-  float: Left; /* Make sure that the links stay side-by-side */
-  display: flex; /* Change the display to block, for responsive reasons (see below) */
+  float: left;
+  display: block;
   color: Black;
   text-align: center;
   padding: 14px 20px;
   text-decoration: none;
- flex-direction: row;
-	
+	border-right:  1px solid #555;
 }
 
-/* Right-aligned link */
 .navbar a.right {
-  float: right; /* Float a link to the right */
+  float: right;
 }
 
-/* Change color on hover/mouse-over */
 .navbar a:hover {
-  background-color: #ddd; /* Grey background color */
-  color: black; /* Black text color */
+  background-color: #ddd;
+  color: black;
+}
+
+
+
+
+.footer {
+  padding: 20px;
+  text-align: center;
+  background: #ddd;
 }
